editors/tree-sitter/test/corpus/compiler_fact_origin.txt
====================
Canonical origin compiler fact
====================

fn run() {
    speed :: 3.5
    origin :: speed.@origin
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (float_literal))
      (bind_stmt
        (identifier)
        (field_expr
          (identifier)
          (compiler_fact
            (identifier)))))))
