editors/tree-sitter/test/corpus/declared_text_heads.txt
====================
Declared checked text heads
====================

marker Pattern on [.Text] {
    check @body
    hole @value
}

---

(source_file
  (marker_decl
    (checked_text_head_decl
      name: (marker_name)
      check: (compiler_fact
        name: (identifier))
      hole: (compiler_fact
        name: (identifier)))))
