editors/tree-sitter/test/corpus/foreign_namespace_lists.txt
========================
Foreign namespace lists
========================

use c.[raylib as rl, sqlite3]
use js.[plotly as plot, d3]

---

(source_file
  (use_stmt
    path: (module_path
      (identifier))
    group: (use_group
      (module_path
        (identifier))
      (identifier)
      (module_path
        (identifier))))
  (use_stmt
    path: (module_path
      (identifier))
    group: (use_group
      (module_path
        (identifier))
      (identifier)
      (module_path
        (identifier)))))
