editors/tree-sitter/test/corpus/marker_declarations.txt
====================
Marker declarations use one parameter list
====================

marker Pattern(value: String, @sites: [], @repeatable: true)

---

(source_file
  (marker_decl
    name: (marker_name)
    (marker_decl_params
      (marker_decl_param
        name: (identifier)
        type: (primitive_type))
      (marker_decl_param
        name: (marker_fact_name
          (identifier))
        (list_literal))
      (marker_decl_param
        name: (marker_fact_name
          (identifier))
        (boolean_literal)))))
