editors/tree-sitter/test/corpus/retired_range_step.txt
==================
Retired range step is rejected
==================

fn run() {
    value :: (1..5 step 2)
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (paren_expr
          (range_expr
            (integer_literal)
            (integer_literal))
          (ERROR
            (config_key)
            (integer_literal)))))))
