editors/tree-sitter/test/corpus/returned_function_call.txt
========================
Returned function call
========================

fn run() {
    returned :: make(0)
    return returned.call(1)
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (call_expr
          (identifier)
          (arg_list
            (integer_literal))))
      (return_stmt
        (method_call_expr
          (identifier)
          (identifier)
          (arg_list
            (integer_literal)))))))
