editors/tree-sitter/test/corpus/task_all_named.txt
==============================
task.all named branches
==============================
fn run() {
  values :: task.all { first: one(), second: two() }
}

---
(source_file
  (function_def
    name: (identifier)
    (param_list)
    (block
      (bind_stmt
        name: (identifier)
        value: (task_selector_expr
          (task_branch
            name: (identifier)
            value: (call_expr
              name: (identifier)
              (arg_list)))
          (task_branch
            name: (identifier)
            value: (call_expr
              name: (identifier)
              (arg_list))))))))
