editors/tree-sitter/test/corpus/task_all_positional.txt
================================
task.all positional branches
================================

fn run() {
    values :: task.all { first(), second() }
}

---

(source_file
  (function_def
    name: (identifier)
    (param_list)
    (block
      (bind_stmt
        name: (identifier)
        value: (task_selector_expr
          (task_branch
            (call_expr
              name: (identifier)
              (arg_list)))
          (task_branch
            (call_expr
              name: (identifier)
              (arg_list))))))))
