editors/tree-sitter/test/corpus/typed_boundary_heads.txt
====================
Boundary typed heads
====================

fn run() {
    endpoint :: URL.{"https://api.example.com/v2"}
    log_path :: Path.{"/var/log/app.log"}
    stamp :: DateTime.{"2026-08-07T12:00:00Z"}
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (typed_literal
          (type_identifier)
          (typed_head_string)))
      (bind_stmt
        (identifier)
        (typed_literal
          (type_identifier)
          (typed_head_string)))
      (bind_stmt
        (identifier)
        (typed_literal
          (type_identifier)
          (typed_head_string))))))
