editors/tree-sitter/test/corpus/typed_head_raw.txt
====================
Typed head raw backslashes
====================

fn run() {
    digits :: Regex.{"\d+"}
    slash_n :: Regex.{"a\nb"}
    braces :: Regex.{"x{{2}}"}
}

---

(source_file
  (function_def
    (identifier)
    (param_list)
    (block
      (bind_stmt
        (identifier)
        (typed_literal
          (type_identifier)
          (typed_head_string
            (typed_head_slash))))
      (bind_stmt
        (identifier)
        (typed_literal
          (type_identifier)
          (typed_head_string
            (typed_head_slash))))
      (bind_stmt
        (identifier)
        (typed_literal
          (type_identifier)
          (typed_head_string
            (typed_head_brace))))))
